# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.596 2006/02/12 23:13:55 agaffney Exp $

*GLI-0.3 (12 Feb 2006)

  12 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  pull old start/end sector values from somewhere that actually has them
  add logic for extended partition to code that makes sure new end sector
  doesn't overlap start sector of next partitions

  11 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  run env-update at the end of copy_pkg_to_chroot()

  10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  I'm a complete fscking dumbass. I recorded the end sector for partitions that
  weren't being touched, but I never used it when recreating them...the end was
  calculated from the size in MB instead :/

  9 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  pre-create /lib64 dir and /lib -> /lib64 symlink if it exists on livecd
  copy /etc/{passwd,group,shadow} from livecd to chroot sans 'gentoo'
  src/GLIPortage.py:
  use tar to transfer files from image dir to /mnt/gentoo instead of 'cp -a'
  src/GLIStorageDevice.py,src/GLIInstallProfile.py,src/templates/x86AT.py:
  'resized' flag

  8 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  short circuit and check vdb directly if package begins with '='

  8 Feb 2006; Preston Cody <codeman@gentoo.org>
  added more packages to extra_packages list in IP

  6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  10 tries to create filesystem instead of 3
  src/GLIPortage, src/GLIArchitectureTemplate.py:
  ignore_missing flag for copy_pkg_to_chroot()

  5 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  copy_pkg_to_chroot() uses $ROOT/vdb for ROOT= installs
