@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.596 2006/02/12 23:13:55 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.597 2006/02/13 00:24:49 agaffney Exp $
 
 *GLI-0.3 (12 Feb 2006)
 
@@ -10,6 +10,7 @@
   pull old start/end sector values from somewhere that actually has them
   add logic for extended partition to code that makes sure new end sector
   doesn't overlap start sector of next partitions
+  don't freak out if partition can't be deleted
 
   11 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
